--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | First</title>
+    <title>Unity WebGL Player | CheckSize</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">First</div>
+        <div id="unity-build-title">CheckSize</div>
       </div>
     </div>
     <script>
@@ -57,15 +57,15 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/prod.loader.js";
+      var loaderUrl = buildUrl + "/CheckSize1.loader.js";
       var config = {
-        dataUrl: buildUrl + "/prod.data",
-        frameworkUrl: buildUrl + "/prod.framework.js",
-        codeUrl: buildUrl + "/prod.wasm",
+        dataUrl: buildUrl + "/CheckSize1.data",
+        frameworkUrl: buildUrl + "/CheckSize1.framework.js",
+        codeUrl: buildUrl + "/CheckSize1.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "First",
-        productVersion: "0.1.0",
+        productName: "CheckSize",
+        productVersion: "0.1",
         showBanner: unityShowBanner,
       };
 
