--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | diamonts_in_the_sky</title>
+    <title>Unity WebGL Player | diamonds_in_the_sky</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -21,7 +21,7 @@
       <!-- <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">diamonts_in_the_sky</div>
+        <div id="unity-build-title">diamonds_in_the_sky</div>
       </div> -->
     </div>
     <script>
@@ -58,14 +58,14 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/diamonts_in_the_sky.loader.js";
+      var loaderUrl = buildUrl + "/diamonds_in_the_sky.loader.js";
       var config = {
-        dataUrl: buildUrl + "/diamonts_in_the_sky.data",
-        frameworkUrl: buildUrl + "/diamonts_in_the_sky.framework.js",
-        codeUrl: buildUrl + "/diamonts_in_the_sky.wasm",
+        dataUrl: buildUrl + "/diamonds_in_the_sky.data",
+        frameworkUrl: buildUrl + "/diamonds_in_the_sky.framework.js",
+        codeUrl: buildUrl + "/diamonds_in_the_sky.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "diamonts_in_the_sky",
+        productName: "diamonds_in_the_sky",
         productVersion: "0.1.0",
         showBanner: unityShowBanner,
       };
