--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | diamonds_in_the_sky</title>
+    <title>Unity WebGL Player | diamond_in_the_sky</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
-    <div id="unity-container" class="unity-desktop" style="position:absolute;width:100%;height:100%;">
-      <canvas id="unity-canvas" style="position:absolute;width:100%;height:100%;" tabindex="-1"></canvas>
+    <div id="unity-container" class="unity-desktop">
+      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -18,11 +17,11 @@
         </div>
       </div>
       <div id="unity-warning"> </div>
-      <!-- <div id="unity-footer">
+      <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">diamonds_in_the_sky</div>
-      </div> -->
+        <div id="unity-build-title">diamond_in_the_sky</div>
+      </div>
     </div>
     <script>
 
@@ -30,7 +29,7 @@
       var canvas = document.querySelector("#unity-canvas");
       var loadingBar = document.querySelector("#unity-loading-bar");
       var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      // var fullscreenButton = document.querySelector("#unity-fullscreen-button");
+      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
       var warningBanner = document.querySelector("#unity-warning");
 
       // Shows a temporary message banner/ribbon for a few seconds, or
@@ -58,15 +57,15 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/diamonds_in_the_sky.loader.js";
+      var loaderUrl = buildUrl + "/diamonds_in_the_sky1.loader.js";
       var config = {
-        dataUrl: buildUrl + "/diamonds_in_the_sky.data",
-        frameworkUrl: buildUrl + "/diamonds_in_the_sky.framework.js",
-        codeUrl: buildUrl + "/diamonds_in_the_sky.wasm",
+        dataUrl: buildUrl + "/diamonds_in_the_sky1.data",
+        frameworkUrl: buildUrl + "/diamonds_in_the_sky1.framework.js",
+        codeUrl: buildUrl + "/diamonds_in_the_sky1.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "diamonds_in_the_sky",
-        productVersion: "0.1.0",
+        productName: "diamond_in_the_sky",
+        productVersion: "0.1.1",
         showBanner: unityShowBanner,
       };
 
@@ -95,8 +94,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "100wh";
-        canvas.style.height = "100vh";
+        canvas.style.width = "960px";
+        canvas.style.height = "600px";
       }
 
       loadingBar.style.display = "block";
@@ -108,9 +107,9 @@
           progressBarFull.style.width = 100 * progress + "%";
               }).then((unityInstance) => {
                 loadingBar.style.display = "none";
-                // fullscreenButton.onclick = () => {
-                //   unityInstance.SetFullscreen(1);
-                // };
+                fullscreenButton.onclick = () => {
+                  unityInstance.SetFullscreen(1);
+                };
               }).catch((message) => {
                 alert(message);
               });
