--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       var progressBarFull = document.querySelector("#unity-progress-bar-full");
       // var fullscreenButton = document.querySelector("#unity-fullscreen-button");
       var warningBanner = document.querySelector("#unity-warning");
-      var diagnostics_icon = document.getElementById("diagnostics-icon");
+      // var diagnostics_icon = document.getElementById("diagnostics-icon");
 
       // Shows a temporary message banner/ribbon for a few seconds, or
       // a permanent error message on top of the canvas if type=='error'.
@@ -95,10 +95,10 @@
         // config.devicePixelRatio = 1;
 
         // position the diagnostics icon in the corner on the canvas
-        diagnostics_icon.style.position = "fixed";
-        diagnostics_icon.style.bottom = "10px";
-        diagnostics_icon.style.right = "0px";
-        canvas.after(diagnostics_icon);
+        // diagnostics_icon.style.position = "fixed";
+        // diagnostics_icon.style.bottom = "10px";
+        // diagnostics_icon.style.right = "0px";
+        // canvas.after(diagnostics_icon);
 
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
